# sPDNgin

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: utilities.cmake
include/game/: components.h  context.h  detail.h  display.h  log.h  result.h  scene.h  script.h  settings.h  tilemap.h  ui.h
include/game/local/: local.h  update.h
include/pdn/: components.h  context.h  detail.h  display.h  local.h  log.h  result.h  scene.h  script.h  settings.h  tilemap.h  ui.h
res/: CMakeLists.txt
res/font/unitblock/: LICENCE
res/img/src/: Goop.xcf  goop.xcf
res/map/: Test.lua
res/map/src/: Test.tmx  map.tmx  test.tmx
res/tile/: Goop.lua
res/tile/src/: Goop.tsx  goop.tsx
src/: context.c  display.c  log.c  main.c  result.c  scene.c  script.c  settings.c  tilemap.c  ui.c
src/local/: game.c  local.c  render.c  tick.c
tool/: CMakeLists.txt  configurator.c
